DLP_AMPL/src/parser/y.output
   0  $accept : program $end

   1  program : _program main

   2  _program :
   3           | _program variable_definition
   4           | _program function_definition

   5  $$1 :

   6  main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body '}'

   7  variable_definition : variables ':' type ';'

   8  variables : ID
   9            | variables ',' ID

  10  $$2 :

  11  function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'

  12  parameters :
  13             | _parameters

  14  _parameters : parameter
  15              | _parameters ',' parameter

  16  parameter : ID ':' simple_type

  17  return_type : simple_type
  18              | VOID

  19  function_body :
  20                | variable_definitions statements
  21                | variable_definitions
  22                | statements

  23  variable_definitions : variable_definition
  24                       | variable_definitions variable_definition

  25  statements : statement
  26             | statements statement

  27  statement : assignment
  28            | function_call_as_statement
  29            | return
  30            | while
  31            | if
  32            | read
  33            | write
  34            | plus_equal
  35            | minus_equal
  36            | mul_equal
  37            | div_equal
  38            | mod_equal
  39            | pre_plus_plus_as_statement
  40            | pre_minus_minus_as_statement
  41            | post_plus_plus_as_statement
  42            | post_minus_minus_as_statement

  43  type : simple_type
  44       | array
  45       | struct

  46  simple_type : INT
  47              | DOUBLE
  48              | CHAR

  49  array : '[' INT_CONSTANT ']' type

  50  struct : STRUCT '{' struct_body '}'

  51  struct_body : variable_definition
  52              | struct_body variable_definition

  53  assignment : expression '=' expression ';'

  54  read : INPUT expressions ';'

  55  $$3 :

  56  write : PRINT $$3 expressions ';'

  57  $$4 :

  58  write : PRINTLN $$4 expressions ';'

  59  expressions : expression
  60              | expressions ',' expression

  61  while : WHILE expression ':' '{' statements '}'
  62        | WHILE expression ':' statement

  63  if : IF expression ':' '{' statements '}'
  64     | IF expression ':' '{' statements '}' ELSE '{' statements '}'
  65     | IF expression ':' '{' statements '}' ELSE statement
  66     | IF expression ':' statement
  67     | IF expression ':' statement ELSE '{' statements '}'
  68     | IF expression ':' statement ELSE statement

  69  $$5 :

  70  return : RETURN $$5 expression ';'

  71  parameters_in_function_call :
  72                              | expressions

  73  function_call_as_statement : ID '(' parameters_in_function_call ')' ';'

  74  plus_equal : expression PLUS_EQUAL expression ';'

  75  minus_equal : expression MINUS_EQUAL expression ';'

  76  mul_equal : expression MUL_EQUAL expression ';'

  77  div_equal : expression DIV_EQUAL expression ';'

  78  mod_equal : expression MOD_EQUAL expression ';'

  79  pre_plus_plus_as_statement : PLUS_PLUS expression ';'

  80  pre_minus_minus_as_statement : MINUS_MINUS expression ';'

  81  post_plus_plus_as_statement : expression PLUS_PLUS ';'

  82  post_minus_minus_as_statement : expression MINUS_MINUS ';'

  83  function_call_as_expression : ID '(' parameters_in_function_call ')'

  84  expression : expression AND expression
  85             | expression OR expression
  86             | expression '>' expression
  87             | expression GREATER_OR_EQUAL expression
  88             | expression '<' expression
  89             | expression LESS_OR_EQUAL expression
  90             | expression DISTINCT expression
  91             | expression EQUALS expression
  92             | expression '+' expression
  93             | expression '-' expression
  94             | expression '*' expression
  95             | expression '/' expression
  96             | expression '%' expression
  97             | '!' expression
  98             | '-' expression
  99             | '(' simple_type ')' expression
 100             | expression '.' ID
 101             | expression '[' expression ']'
 102             | '(' expression ')'
 103             | function_call_as_expression
 104             | INT_CONSTANT
 105             | REAL_CONSTANT
 106             | CHAR_CONSTANT
 107             | ID
 108             | PLUS_PLUS expression
 109             | MINUS_MINUS expression
 110             | expression PLUS_PLUS
 111             | expression MINUS_MINUS

state 0
	$accept : . program $end  (0)
	_program : .  (2)

	.  reduce 2

	program  goto 1
	_program  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : _program . main  (1)
	_program : _program . variable_definition  (3)
	_program : _program . function_definition  (4)

	DEF  shift 3
	ID  shift 4
	.  error

	main  goto 5
	variable_definition  goto 6
	function_definition  goto 7
	variables  goto 8


state 3
	main : DEF . $$1 MAIN '(' ')' ':' VOID '{' function_body '}'  (6)
	function_definition : DEF . $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)
	$$1 : .  (5)
	$$2 : .  (10)

	ID  reduce 10
	MAIN  reduce 5

	$$1  goto 9
	$$2  goto 10


state 4
	variables : ID .  (8)

	.  reduce 8


state 5
	program : _program main .  (1)

	.  reduce 1


state 6
	_program : _program variable_definition .  (3)

	.  reduce 3


state 7
	_program : _program function_definition .  (4)

	.  reduce 4


state 8
	variable_definition : variables . ':' type ';'  (7)
	variables : variables . ',' ID  (9)

	':'  shift 11
	','  shift 12
	.  error


state 9
	main : DEF $$1 . MAIN '(' ')' ':' VOID '{' function_body '}'  (6)

	MAIN  shift 13
	.  error


state 10
	function_definition : DEF $$2 . ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	ID  shift 14
	.  error


state 11
	variable_definition : variables ':' . type ';'  (7)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 20
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 12
	variables : variables ',' . ID  (9)

	ID  shift 24
	.  error


state 13
	main : DEF $$1 MAIN . '(' ')' ':' VOID '{' function_body '}'  (6)

	'('  shift 25
	.  error


state 14
	function_definition : DEF $$2 ID . '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	'('  shift 26
	.  error


state 15
	simple_type : INT .  (46)

	.  reduce 46


state 16
	simple_type : DOUBLE .  (47)

	.  reduce 47


state 17
	simple_type : CHAR .  (48)

	.  reduce 48


state 18
	struct : STRUCT . '{' struct_body '}'  (50)

	'{'  shift 27
	.  error


state 19
	array : '[' . INT_CONSTANT ']' type  (49)

	INT_CONSTANT  shift 28
	.  error


state 20
	variable_definition : variables ':' type . ';'  (7)

	';'  shift 29
	.  error


state 21
	type : simple_type .  (43)

	.  reduce 43


state 22
	type : array .  (44)

	.  reduce 44


state 23
	type : struct .  (45)

	.  reduce 45


state 24
	variables : variables ',' ID .  (9)

	.  reduce 9


state 25
	main : DEF $$1 MAIN '(' . ')' ':' VOID '{' function_body '}'  (6)

	')'  shift 30
	.  error


state 26
	function_definition : DEF $$2 ID '(' . parameters ')' ':' return_type '{' function_body '}'  (11)
	parameters : .  (12)

	ID  shift 31
	')'  reduce 12

	parameters  goto 32
	_parameters  goto 33
	parameter  goto 34


state 27
	struct : STRUCT '{' . struct_body '}'  (50)

	ID  shift 4
	.  error

	variable_definition  goto 35
	variables  goto 8
	struct_body  goto 36


state 28
	array : '[' INT_CONSTANT . ']' type  (49)

	']'  shift 37
	.  error


state 29
	variable_definition : variables ':' type ';' .  (7)

	.  reduce 7


state 30
	main : DEF $$1 MAIN '(' ')' . ':' VOID '{' function_body '}'  (6)

	':'  shift 38
	.  error


state 31
	parameter : ID . ':' simple_type  (16)

	':'  shift 39
	.  error


state 32
	function_definition : DEF $$2 ID '(' parameters . ')' ':' return_type '{' function_body '}'  (11)

	')'  shift 40
	.  error


state 33
	parameters : _parameters .  (13)
	_parameters : _parameters . ',' parameter  (15)

	','  shift 41
	')'  reduce 13


state 34
	_parameters : parameter .  (14)

	.  reduce 14


state 35
	struct_body : variable_definition .  (51)

	.  reduce 51


state 36
	struct : STRUCT '{' struct_body . '}'  (50)
	struct_body : struct_body . variable_definition  (52)

	ID  shift 4
	'}'  shift 42
	.  error

	variable_definition  goto 43
	variables  goto 8


state 37
	array : '[' INT_CONSTANT ']' . type  (49)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 44
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 38
	main : DEF $$1 MAIN '(' ')' ':' . VOID '{' function_body '}'  (6)

	VOID  shift 45
	.  error


state 39
	parameter : ID ':' . simple_type  (16)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	.  error

	simple_type  goto 46


state 40
	function_definition : DEF $$2 ID '(' parameters ')' . ':' return_type '{' function_body '}'  (11)

	':'  shift 47
	.  error


state 41
	_parameters : _parameters ',' . parameter  (15)

	ID  shift 31
	.  error

	parameter  goto 48


state 42
	struct : STRUCT '{' struct_body '}' .  (50)

	.  reduce 50


state 43
	struct_body : struct_body variable_definition .  (52)

	.  reduce 52


state 44
	array : '[' INT_CONSTANT ']' type .  (49)

	.  reduce 49


state 45
	main : DEF $$1 MAIN '(' ')' ':' VOID . '{' function_body '}'  (6)

	'{'  shift 49
	.  error


state 46
	parameter : ID ':' simple_type .  (16)

	.  reduce 16


state 47
	function_definition : DEF $$2 ID '(' parameters ')' ':' . return_type '{' function_body '}'  (11)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	VOID  shift 50
	.  error

	return_type  goto 51
	simple_type  goto 52


state 48
	_parameters : _parameters ',' parameter .  (15)

	.  reduce 15


state 49
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' . function_body '}'  (6)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 65
	MINUS_MINUS  shift 66
	'('  shift 67
	'}'  reduce 19

	variable_definition  goto 68
	function_body  goto 69
	variables  goto 8
	variable_definitions  goto 70
	statements  goto 71
	statement  goto 72
	assignment  goto 73
	function_call_as_statement  goto 74
	return  goto 75
	while  goto 76
	if  goto 77
	read  goto 78
	write  goto 79
	plus_equal  goto 80
	minus_equal  goto 81
	mul_equal  goto 82
	div_equal  goto 83
	mod_equal  goto 84
	pre_plus_plus_as_statement  goto 85
	pre_minus_minus_as_statement  goto 86
	post_plus_plus_as_statement  goto 87
	post_minus_minus_as_statement  goto 88
	expression  goto 89
	function_call_as_expression  goto 90


state 50
	return_type : VOID .  (18)

	.  reduce 18


state 51
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type . '{' function_body '}'  (11)

	'{'  shift 91
	.  error


state 52
	return_type : simple_type .  (17)

	.  reduce 17


state 53
	expression : INT_CONSTANT .  (104)

	.  reduce 104


state 54
	expression : REAL_CONSTANT .  (105)

	.  reduce 105


state 55
	expression : CHAR_CONSTANT .  (106)

	.  reduce 106


state 56
	read : INPUT . expressions ';'  (54)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 95
	expressions  goto 96
	function_call_as_expression  goto 90


state 57
	write : PRINT . $$3 expressions ';'  (56)
	$$3 : .  (55)

	.  reduce 55

	$$3  goto 97


state 58
	write : PRINTLN . $$4 expressions ';'  (58)
	$$4 : .  (57)

	.  reduce 57

	$$4  goto 98


state 59
	while : WHILE . expression ':' '{' statements '}'  (61)
	while : WHILE . expression ':' statement  (62)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 99
	function_call_as_expression  goto 90


state 60
	if : IF . expression ':' '{' statements '}'  (63)
	if : IF . expression ':' '{' statements '}' ELSE '{' statements '}'  (64)
	if : IF . expression ':' '{' statements '}' ELSE statement  (65)
	if : IF . expression ':' statement  (66)
	if : IF . expression ':' statement ELSE '{' statements '}'  (67)
	if : IF . expression ':' statement ELSE statement  (68)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 100
	function_call_as_expression  goto 90


state 61
	return : RETURN . $$5 expression ';'  (70)
	$$5 : .  (69)

	.  reduce 69

	$$5  goto 101


state 62
	variables : ID .  (8)
	function_call_as_statement : ID . '(' parameters_in_function_call ')' ';'  (73)
	function_call_as_expression : ID . '(' parameters_in_function_call ')'  (83)
	expression : ID .  (107)

	'('  shift 102
	'='  reduce 107
	PLUS_EQUAL  reduce 107
	MINUS_EQUAL  reduce 107
	MUL_EQUAL  reduce 107
	DIV_EQUAL  reduce 107
	MOD_EQUAL  reduce 107
	AND  reduce 107
	OR  reduce 107
	'>'  reduce 107
	GREATER_OR_EQUAL  reduce 107
	'<'  reduce 107
	LESS_OR_EQUAL  reduce 107
	DISTINCT  reduce 107
	EQUALS  reduce 107
	'+'  reduce 107
	'-'  reduce 107
	'*'  reduce 107
	'/'  reduce 107
	'%'  reduce 107
	PLUS_PLUS  reduce 107
	MINUS_MINUS  reduce 107
	'.'  reduce 107
	'['  reduce 107
	':'  reduce 8
	','  reduce 8


state 63
	expression : '-' . expression  (98)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 103
	function_call_as_expression  goto 90


state 64
	expression : '!' . expression  (97)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 104
	function_call_as_expression  goto 90


state 65
	pre_plus_plus_as_statement : PLUS_PLUS . expression ';'  (79)
	expression : PLUS_PLUS . expression  (108)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 105
	function_call_as_expression  goto 90


state 66
	pre_minus_minus_as_statement : MINUS_MINUS . expression ';'  (80)
	expression : MINUS_MINUS . expression  (109)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 106
	function_call_as_expression  goto 90


state 67
	expression : '(' . simple_type ')' expression  (99)
	expression : '(' . expression ')'  (102)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	simple_type  goto 107
	expression  goto 108
	function_call_as_expression  goto 90


state 68
	variable_definitions : variable_definition .  (23)

	.  reduce 23


state 69
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body . '}'  (6)

	'}'  shift 109
	.  error


state 70
	function_body : variable_definitions . statements  (20)
	function_body : variable_definitions .  (21)
	variable_definitions : variable_definitions . variable_definition  (24)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 65
	MINUS_MINUS  shift 66
	'('  shift 67
	'}'  reduce 21

	variable_definition  goto 110
	variables  goto 8
	statements  goto 111
	statement  goto 72
	assignment  goto 73
	function_call_as_statement  goto 74
	return  goto 75
	while  goto 76
	if  goto 77
	read  goto 78
	write  goto 79
	plus_equal  goto 80
	minus_equal  goto 81
	mul_equal  goto 82
	div_equal  goto 83
	mod_equal  goto 84
	pre_plus_plus_as_statement  goto 85
	pre_minus_minus_as_statement  goto 86
	post_plus_plus_as_statement  goto 87
	post_minus_minus_as_statement  goto 88
	expression  goto 89
	function_call_as_expression  goto 90


state 71
	function_body : statements .  (22)
	statements : statements . statement  (26)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 112
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 65
	MINUS_MINUS  shift 66
	'('  shift 67
	'}'  reduce 22

	statement  goto 113
	assignment  goto 73
	function_call_as_statement  goto 74
	return  goto 75
	while  goto 76
	if  goto 77
	read  goto 78
	write  goto 79
	plus_equal  goto 80
	minus_equal  goto 81
	mul_equal  goto 82
	div_equal  goto 83
	mod_equal  goto 84
	pre_plus_plus_as_statement  goto 85
	pre_minus_minus_as_statement  goto 86
	post_plus_plus_as_statement  goto 87
	post_minus_minus_as_statement  goto 88
	expression  goto 89
	function_call_as_expression  goto 90


state 72
	statements : statement .  (25)

	.  reduce 25


state 73
	statement : assignment .  (27)

	.  reduce 27


state 74
	statement : function_call_as_statement .  (28)

	.  reduce 28


state 75
	statement : return .  (29)

	.  reduce 29


state 76
	statement : while .  (30)

	.  reduce 30


state 77
	statement : if .  (31)

	.  reduce 31


state 78
	statement : read .  (32)

	.  reduce 32


state 79
	statement : write .  (33)

	.  reduce 33


state 80
	statement : plus_equal .  (34)

	.  reduce 34


state 81
	statement : minus_equal .  (35)

	.  reduce 35


state 82
	statement : mul_equal .  (36)

	.  reduce 36


state 83
	statement : div_equal .  (37)

	.  reduce 37


state 84
	statement : mod_equal .  (38)

	.  reduce 38


state 85
	statement : pre_plus_plus_as_statement .  (39)

	.  reduce 39


state 86
	statement : pre_minus_minus_as_statement .  (40)

	.  reduce 40


state 87
	statement : post_plus_plus_as_statement .  (41)

	.  reduce 41


state 88
	statement : post_minus_minus_as_statement .  (42)

	.  reduce 42


state 89
	assignment : expression . '=' expression ';'  (53)
	plus_equal : expression . PLUS_EQUAL expression ';'  (74)
	minus_equal : expression . MINUS_EQUAL expression ';'  (75)
	mul_equal : expression . MUL_EQUAL expression ';'  (76)
	div_equal : expression . DIV_EQUAL expression ';'  (77)
	mod_equal : expression . MOD_EQUAL expression ';'  (78)
	post_plus_plus_as_statement : expression . PLUS_PLUS ';'  (81)
	post_minus_minus_as_statement : expression . MINUS_MINUS ';'  (82)
	expression : expression . AND expression  (84)
	expression : expression . OR expression  (85)
	expression : expression . '>' expression  (86)
	expression : expression . GREATER_OR_EQUAL expression  (87)
	expression : expression . '<' expression  (88)
	expression : expression . LESS_OR_EQUAL expression  (89)
	expression : expression . DISTINCT expression  (90)
	expression : expression . EQUALS expression  (91)
	expression : expression . '+' expression  (92)
	expression : expression . '-' expression  (93)
	expression : expression . '*' expression  (94)
	expression : expression . '/' expression  (95)
	expression : expression . '%' expression  (96)
	expression : expression . '.' ID  (100)
	expression : expression . '[' expression ']'  (101)
	expression : expression . PLUS_PLUS  (110)
	expression : expression . MINUS_MINUS  (111)

	'='  shift 114
	PLUS_EQUAL  shift 115
	MINUS_EQUAL  shift 116
	MUL_EQUAL  shift 117
	DIV_EQUAL  shift 118
	MOD_EQUAL  shift 119
	AND  shift 120
	OR  shift 121
	'>'  shift 122
	GREATER_OR_EQUAL  shift 123
	'<'  shift 124
	LESS_OR_EQUAL  shift 125
	DISTINCT  shift 126
	EQUALS  shift 127
	'+'  shift 128
	'-'  shift 129
	'*'  shift 130
	'/'  shift 131
	'%'  shift 132
	PLUS_PLUS  shift 133
	MINUS_MINUS  shift 134
	'.'  shift 135
	'['  shift 136
	.  error


state 90
	expression : function_call_as_expression .  (103)

	.  reduce 103


state 91
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' . function_body '}'  (11)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 65
	MINUS_MINUS  shift 66
	'('  shift 67
	'}'  reduce 19

	variable_definition  goto 68
	function_body  goto 137
	variables  goto 8
	variable_definitions  goto 70
	statements  goto 71
	statement  goto 72
	assignment  goto 73
	function_call_as_statement  goto 74
	return  goto 75
	while  goto 76
	if  goto 77
	read  goto 78
	write  goto 79
	plus_equal  goto 80
	minus_equal  goto 81
	mul_equal  goto 82
	div_equal  goto 83
	mod_equal  goto 84
	pre_plus_plus_as_statement  goto 85
	pre_minus_minus_as_statement  goto 86
	post_plus_plus_as_statement  goto 87
	post_minus_minus_as_statement  goto 88
	expression  goto 89
	function_call_as_expression  goto 90


state 92
	function_call_as_expression : ID . '(' parameters_in_function_call ')'  (83)
	expression : ID .  (107)

	'('  shift 138
	'='  reduce 107
	PLUS_EQUAL  reduce 107
	MINUS_EQUAL  reduce 107
	MUL_EQUAL  reduce 107
	DIV_EQUAL  reduce 107
	MOD_EQUAL  reduce 107
	AND  reduce 107
	OR  reduce 107
	'>'  reduce 107
	GREATER_OR_EQUAL  reduce 107
	'<'  reduce 107
	LESS_OR_EQUAL  reduce 107
	DISTINCT  reduce 107
	EQUALS  reduce 107
	'+'  reduce 107
	'-'  reduce 107
	'*'  reduce 107
	'/'  reduce 107
	'%'  reduce 107
	PLUS_PLUS  reduce 107
	MINUS_MINUS  reduce 107
	'.'  reduce 107
	'['  reduce 107
	']'  reduce 107
	')'  reduce 107
	':'  reduce 107
	';'  reduce 107
	','  reduce 107


state 93
	expression : PLUS_PLUS . expression  (108)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 139
	function_call_as_expression  goto 90


state 94
	expression : MINUS_MINUS . expression  (109)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 140
	function_call_as_expression  goto 90


state 95
	expressions : expression .  (59)
	expression : expression . AND expression  (84)
	expression : expression . OR expression  (85)
	expression : expression . '>' expression  (86)
	expression : expression . GREATER_OR_EQUAL expression  (87)
	expression : expression . '<' expression  (88)
	expression : expression . LESS_OR_EQUAL expression  (89)
	expression : expression . DISTINCT expression  (90)
	expression : expression . EQUALS expression  (91)
	expression : expression . '+' expression  (92)
	expression : expression . '-' expression  (93)
	expression : expression . '*' expression  (94)
	expression : expression . '/' expression  (95)
	expression : expression . '%' expression  (96)
	expression : expression . '.' ID  (100)
	expression : expression . '[' expression ']'  (101)
	expression : expression . PLUS_PLUS  (110)
	expression : expression . MINUS_MINUS  (111)

	AND  shift 120
	OR  shift 121
	'>'  shift 122
	GREATER_OR_EQUAL  shift 123
	'<'  shift 124
	LESS_OR_EQUAL  shift 125
	DISTINCT  shift 126
	EQUALS  shift 127
	'+'  shift 128
	'-'  shift 129
	'*'  shift 130
	'/'  shift 131
	'%'  shift 132
	PLUS_PLUS  shift 141
	MINUS_MINUS  shift 142
	'.'  shift 135
	'['  shift 136
	')'  reduce 59
	';'  reduce 59
	','  reduce 59


state 96
	read : INPUT expressions . ';'  (54)
	expressions : expressions . ',' expression  (60)

	';'  shift 143
	','  shift 144
	.  error


state 97
	write : PRINT $$3 . expressions ';'  (56)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 95
	expressions  goto 145
	function_call_as_expression  goto 90


state 98
	write : PRINTLN $$4 . expressions ';'  (58)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 95
	expressions  goto 146
	function_call_as_expression  goto 90


state 99
	while : WHILE expression . ':' '{' statements '}'  (61)
	while : WHILE expression . ':' statement  (62)
	expression : expression . AND expression  (84)
	expression : expression . OR expression  (85)
	expression : expression . '>' expression  (86)
	expression : expression . GREATER_OR_EQUAL expression  (87)
	expression : expression . '<' expression  (88)
	expression : expression . LESS_OR_EQUAL expression  (89)
	expression : expression . DISTINCT expression  (90)
	expression : expression . EQUALS expression  (91)
	expression : expression . '+' expression  (92)
	expression : expression . '-' expression  (93)
	expression : expression . '*' expression  (94)
	expression : expression . '/' expression  (95)
	expression : expression . '%' expression  (96)
	expression : expression . '.' ID  (100)
	expression : expression . '[' expression ']'  (101)
	expression : expression . PLUS_PLUS  (110)
	expression : expression . MINUS_MINUS  (111)

	AND  shift 120
	OR  shift 121
	'>'  shift 122
	GREATER_OR_EQUAL  shift 123
	'<'  shift 124
	LESS_OR_EQUAL  shift 125
	DISTINCT  shift 126
	EQUALS  shift 127
	'+'  shift 128
	'-'  shift 129
	'*'  shift 130
	'/'  shift 131
	'%'  shift 132
	PLUS_PLUS  shift 141
	MINUS_MINUS  shift 142
	'.'  shift 135
	'['  shift 136
	':'  shift 147
	.  error


state 100
	if : IF expression . ':' '{' statements '}'  (63)
	if : IF expression . ':' '{' statements '}' ELSE '{' statements '}'  (64)
	if : IF expression . ':' '{' statements '}' ELSE statement  (65)
	if : IF expression . ':' statement  (66)
	if : IF expression . ':' statement ELSE '{' statements '}'  (67)
	if : IF expression . ':' statement ELSE statement  (68)
	expression : expression . AND expression  (84)
	expression : expression . OR expression  (85)
	expression : expression . '>' expression  (86)
	expression : expression . GREATER_OR_EQUAL expression  (87)
	expression : expression . '<' expression  (88)
	expression : expression . LESS_OR_EQUAL expression  (89)
	expression : expression . DISTINCT expression  (90)
	expression : expression . EQUALS expression  (91)
	expression : expression . '+' expression  (92)
	expression : expression . '-' expression  (93)
	expression : expression . '*' expression  (94)
	expression : expression . '/' expression  (95)
	expression : expression . '%' expression  (96)
	expression : expression . '.' ID  (100)
	expression : expression . '[' expression ']'  (101)
	expression : expression . PLUS_PLUS  (110)
	expression : expression . MINUS_MINUS  (111)

	AND  shift 120
	OR  shift 121
	'>'  shift 122
	GREATER_OR_EQUAL  shift 123
	'<'  shift 124
	LESS_OR_EQUAL  shift 125
	DISTINCT  shift 126
	EQUALS  shift 127
	'+'  shift 128
	'-'  shift 129
	'*'  shift 130
	'/'  shift 131
	'%'  shift 132
	PLUS_PLUS  shift 141
	MINUS_MINUS  shift 142
	'.'  shift 135
	'['  shift 136
	':'  shift 148
	.  error


state 101
	return : RETURN $$5 . expression ';'  (70)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	.  error

	expression  goto 149
	function_call_as_expression  goto 90


state 102
	function_call_as_statement : ID '(' . parameters_in_function_call ')' ';'  (73)
	function_call_as_expression : ID '(' . parameters_in_function_call ')'  (83)
	parameters_in_function_call : .  (71)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 92
	'-'  shift 63
	'!'  shift 64
	PLUS_PLUS  shift 93
	MINUS_MINUS  shift 94
	'('  shift 67
	')'  reduce 71

	expression  goto 95
	expressions  goto 150
	parameters_in_function_call  goto 151
	function_call_as_expression  goto 90

